Remove all unused Jars in the webapp/WEB-INF/lib folder
Create a maven dependencies for needed jars in  webapp/WEB-INF/lib folder